--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ h2 {margin: 40px 0 auto;}
 			<h2>Here are my sample projects:</h2>
 				<ul class="myUL"> 
 					<nav>
-						<li><b><a href="/project 1/">Project 1</a></b> - <a>My Portfolio - https://jheromeoliveros.github.io/githubproject/</a></li>
+						<li><b><a href="/project 1/">Project 1</a></b> - <a>My Portfolio - "https://jheromeoliveros.github.io/githubproject/"</a></li>
 						<li><b><a href="/project 2/">Project 2</a></b> - <a>My Business Website</a></li>
 					</nav>
 				</ul class>
